--- a/platform/win32/Sprout.vcxproj
+++ b/platform/win32/Sprout.vcxproj
@@ -12,12 +12,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\application.cpp" />
+    <ClCompile Include="..\..\src\SdlDraw.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="SdlDraw.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\application.h" />
-    <ClInclude Include="SdlDraw.h" />
+    <ClInclude Include="..\..\src\SdlDraw.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{EC6E796A-C713-4CB5-9054-4F7C9E5E2456}</ProjectGuid>
