--- a/platform/win32/Sprout.vcxproj.filters
+++ b/platform/win32/Sprout.vcxproj.filters
@@ -24,13 +24,19 @@
     <ClCompile Include="..\..\src\application.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\math.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\SdlDraw.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\application.h">
-      <Filter>源文件</Filter>
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\math.h">
+      <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
