--- a/platform/win32/Sprout.vcxproj
+++ b/platform/win32/Sprout.vcxproj
@@ -13,12 +13,12 @@
   <ItemGroup>
     <ClCompile Include="..\..\src\application.cpp" />
     <ClCompile Include="..\..\src\main.cpp" />
-    <ClCompile Include="..\..\src\math.cpp" />
+    <ClCompile Include="..\..\src\sprout_math.cpp" />
     <ClCompile Include="..\..\src\SdlDraw.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\application.h" />
-    <ClInclude Include="..\..\src\math.h" />
+    <ClInclude Include="..\..\src\sprout_math.h" />
     <ClInclude Include="..\..\src\SdlDraw.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
