--- a/platform/win32/Sprout.vcxproj.filters
+++ b/platform/win32/Sprout.vcxproj.filters
@@ -21,10 +21,10 @@
     <ClCompile Include="..\..\src\application.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\math.cpp">
+    <ClCompile Include="..\..\src\main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\main.cpp">
+    <ClCompile Include="..\..\src\sprout_math.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
@@ -35,7 +35,7 @@
     <ClInclude Include="..\..\src\application.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\src\math.h">
+    <ClInclude Include="..\..\src\sprout_math.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
